# testProject

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  modules.rst  smet.rst
docs/jupyter_execute/: example.ipynb
src/smet/: __init__.py  smet.py
tests/: test_smet.py
